--- a/app/src/main/res/layout/activity_add_blog.xml
+++ b/app/src/main/res/layout/activity_add_blog.xml
@@ -7,19 +7,19 @@
     android:layout_height="match_parent"
     tools:context=".AddBlogActivity">
 
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/back"
-        tools:layout_editor_absoluteX="20dp"
-        tools:layout_editor_absoluteY="13dp" />
+<!--    <ImageButton-->
+<!--        android:id="@+id/imageButton2"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:srcCompat="@drawable/back"-->
+<!--        tools:layout_editor_absoluteY="13dp" />-->
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="28dp"
-        tools:layout_editor_absoluteY="75dp" />
+<!--    <TextView-->
+<!--        android:id="@+id/textView4"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="TextView"-->
+<!--        tools:layout_editor_absoluteX="28dp"-->
+<!--        tools:layout_editor_absoluteY="75dp" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
