--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -62,7 +62,7 @@
         android:ems="10"
         android:fontFamily="@font/aclonica"
         android:hint="Enter Email"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="@color/hint_color"
@@ -81,7 +81,7 @@
         android:ems="10"
         android:fontFamily="@font/aclonica"
         android:hint="Enter Password"
-        android:inputType="text"
+        android:inputType="numberPassword"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="@color/hint_color"
@@ -118,7 +118,7 @@
         android:ems="10"
         android:fontFamily="@font/aclonica"
         android:textColor="@color/black"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
         android:hint="Enter Email"
         android:textColorHint="@color/hint_color"
         android:textAlignment="center"
@@ -136,7 +136,7 @@
         android:ems="10"
         android:fontFamily="@font/aclonica"
         android:textColor="@color/black"
-        android:inputType="text"
+        android:inputType="numberPassword"
         android:hint="Enter Password"
         android:textColorHint="@color/hint_color"
         android:textAlignment="center"
