--- a/app/src/main/res/layout/recycler_item.xml
+++ b/app/src/main/res/layout/recycler_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="240dp"
+    android:layout_height="235dp"
     android:layout_marginBottom="25dp"
     android:background="@color/white"
     android:elevation="3dp"
@@ -20,6 +20,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="9dp"
             android:layout_marginTop="15dp"
+            android:layout_marginRight="20dp"
+            android:ellipsize="end"
             android:fontFamily="@font/aclonica"
             android:maxLines="2"
             android:text="Blog Title"
@@ -34,6 +36,7 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_marginEnd="5dp"
+            android:layout_marginStart="20dp"
             app:cardCornerRadius="20dp"
             app:layout_constraintBottom_toBottomOf="@+id/blogger_name"
             app:layout_constraintEnd_toStartOf="@+id/blogger_name"
@@ -87,10 +90,11 @@
         <TextView
             android:id="@+id/blog_content"
             android:layout_width="0dp"
-            android:layout_height="80dp"
+            android:layout_height="75dp"
             android:layout_marginTop="10dp"
-            android:maxLines="4"
+            android:maxLines="3"
             android:textSize="16sp"
+            android:ellipsize="end"
             android:fontFamily="sans-serif-thin"
             android:textColor="@color/black"
             android:textStyle="bold"
