--- a/app/src/main/res/layout/activity_edit_blog.xml
+++ b/app/src/main/res/layout/activity_edit_blog.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="@color/white"
+    android:background="@drawable/bg_app"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".EditBlogActivity">
@@ -40,7 +40,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="56dp"
         android:text="Title"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textStyle="bold"
         android:fontFamily="@font/aclonica"
         android:textSize="16sp"
@@ -54,7 +54,7 @@
         android:fontFamily="@font/aclonica"
         android:layout_marginTop="20dp"
         android:text="Blog Description"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="@+id/blogTitle"
@@ -66,8 +66,9 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:text="Save"
-        android:textColor="@color/black"
+        android:textColor="@color/white"
         android:textStyle="bold"
+        android:backgroundTint="@color/black"
         android:fontFamily="@font/aclonica"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,8 +92,9 @@
             android:background="@drawable/search_shape"
             android:fontFamily="sans-serif-medium"
             android:textSize="16sp"
+            android:backgroundTint="@color/white"
             android:hint="Enter Blog Title"
-            android:textColor="@color/purple" />
+            android:textColor="@color/black" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -115,6 +117,7 @@
             android:textSize="16sp"
             android:gravity="top"
             android:textColor="@color/black"
+            android:backgroundTint="@color/white"
             android:hint="Enter Blog Description" />
     </com.google.android.material.textfield.TextInputLayout>
 
