--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="@color/white"
+    android:background="@drawable/bg_app"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginRegisterActivity">
@@ -16,6 +16,8 @@
         android:layout_marginTop="304dp"
         android:fontFamily="@font/aclonica"
         android:text="Login"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/white"
         android:textSize="20dp"
         app:layout_constraintTop_toBottomOf="@+id/cardView"
         tools:layout_editor_absoluteX="30dp" />
@@ -28,6 +30,8 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/aclonica"
         android:text="Register"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/white"
         android:textSize="20dp"
         app:layout_constraintTop_toBottomOf="@+id/loginButton"
         tools:layout_editor_absoluteX="16dp" />
@@ -37,7 +41,8 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_marginTop="80dp"
-        app:cardCornerRadius="80dp"
+        app:cardCornerRadius="500dp"
+        android:backgroundTint="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -56,7 +61,7 @@
     <EditText
         android:id="@+id/login_email"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="64dp"
         android:ems="10"
@@ -67,6 +72,8 @@
         android:textColor="@color/black"
         android:textColorHint="@color/hint_color"
         android:visibility="gone"
+        android:background="@drawable/edittext_shape"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
         app:layout_constraintHorizontal_bias="0.513"
         app:layout_constraintStart_toStartOf="@+id/cardView"
@@ -75,7 +82,7 @@
     <EditText
         android:id="@+id/login_password"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginHorizontal="30dp"
         android:layout_marginTop="28dp"
         android:ems="10"
@@ -86,6 +93,8 @@
         android:textColor="@color/black"
         android:textColorHint="@color/hint_color"
         android:visibility="gone"
+        android:background="@drawable/edittext_shape"
+        android:backgroundTint="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/login_email"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/login_email"
@@ -102,6 +111,8 @@
         android:textColor="@color/black"
         android:inputType="text"
         android:hint="Enter Name"
+        android:background="@drawable/edittext_shape"
+        android:backgroundTint="@color/white"
         android:textColorHint="@color/hint_color"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
@@ -120,6 +131,8 @@
         android:textColor="@color/black"
         android:inputType="textEmailAddress"
         android:hint="Enter Email"
+        android:background="@drawable/edittext_shape"
+        android:backgroundTint="@color/white"
         android:textColorHint="@color/hint_color"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="@+id/register_name"
@@ -138,6 +151,8 @@
         android:textColor="@color/black"
         android:inputType="numberPassword"
         android:hint="Enter Password"
+        android:background="@drawable/edittext_shape"
+        android:backgroundTint="@color/white"
         android:textColorHint="@color/hint_color"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="@+id/register_email"
