--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -3,17 +3,18 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
-    android:background="@color/white"
+    android:background="@drawable/bg_app"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProfileActivity">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView4"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="170dp"
+        android:layout_height="170dp"
         android:layout_marginTop="64dp"
         app:cardCornerRadius="300dp"
+        android:backgroundTint="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,7 +32,7 @@
         android:id="@+id/profile_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         android:text="Blogger Name"
         android:textSize="20sp"
         android:textColor="@color/black"
@@ -43,8 +44,10 @@
     <View
         android:id="@+id/divider"
         android:layout_width="300dp"
-        android:layout_height="2dp"
+        android:layout_height="5dp"
         android:layout_marginTop="20dp"
+        android:outlineAmbientShadowColor="@color/white"
+        android:outlineSpotShadowColor="@color/white"
         android:background="?android:attr/listDivider"
         app:layout_constraintEnd_toEndOf="@+id/profile_name"
         app:layout_constraintHorizontal_bias="0.495"
@@ -53,16 +56,17 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_myblogs"
-        android:layout_width="150dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="108dp"
+        android:layout_width="170dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="128dp"
         android:background="@android:color/transparent"
         android:drawableStart="@drawable/blog_icon"
         android:drawablePadding="2dp"
-        android:drawableTint="@color/purple"
+        android:drawableTint="@color/white"
         android:fontFamily="@font/aclonica"
         android:text="My Blogs"
-        android:textSize="18sp"
+        android:textSize="23sp"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/profile_name"
         app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="@+id/profile_name"
@@ -70,16 +74,17 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_logout"
-        android:layout_width="130dp"
+        android:layout_width="170dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:background="@android:color/transparent"
-        android:drawableStart="@drawable/logout"
+        android:drawableStart="@drawable/icon_logout"
         android:drawablePadding="2dp"
-        android:drawableTint="@color/purple"
+        android:drawableTint="@color/white"
         android:fontFamily="@font/aclonica"
         android:text="Logout"
-        android:textSize="18sp"
+        android:textSize="23sp"
+        android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="@+id/btn_myblogs"
         app:layout_constraintStart_toStartOf="@+id/btn_myblogs"
         app:layout_constraintTop_toBottomOf="@+id/btn_myblogs" />
