--- a/app/src/main/res/layout/recycler_item_myblog.xml
+++ b/app/src/main/res/layout/recycler_item_myblog.xml
@@ -108,6 +108,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
             android:text="Read more"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/edit_btn"
             app:layout_constraintHorizontal_bias="0.5"
@@ -120,6 +121,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#070303"
             android:text="Edit"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/readmore"
             app:layout_constraintEnd_toStartOf="@+id/delete_btn"
             app:layout_constraintHorizontal_bias="0.5"
@@ -132,6 +134,7 @@
             android:layout_height="wrap_content"
             android:backgroundTint="#DB0303"
             android:text="Delete"
+            android:textColor="@color/white"
             app:layout_constraintBottom_toBottomOf="@+id/edit_btn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
